# fish-cas

./: Cargo.toml  README.md  fibonacci.math
src/: algebra.rs  evaluator.rs  main.rs  number.rs  old_number.rs  parser.rs  state.rs  tokenizer.rs
