[package]
name = "fish-cas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.20"
num = {version="0.4.1", features = ["std","rand"]}
rand = "0.8.5"
random = "0.14.0"
